--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Department of Pranking Enforcement</title>
+    <title>Admin Login</title>
+    <script type="text/javascript" src="script.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
+  <body>
+    
+  </body>
 </html>
