--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    
+    <script>
+      alert("Hi");
+    </script>
   </body>
 </html>
