--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1>HI</h1>
+    <h1>this is me</h1>
   </body>
 </html>
