--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <script>
-      alert("hi')
-    </script>
+    <p onclick="alert("Hi");">hi</p>
   </body>
 </html>
