--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <p onclick="alert("Hi");">hi</p>
+   <a href="https://tappunidental.com" onclick="alert("Hi");">
+     HI
+   </a>
   </body>
 </html>
