--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-   <a href="https://tappunidental.com" onclick="alert("Hi");">
+   <a href="https://tappunidental.com" onclick="window.alert("Hi");">
      HI
    </a>
   </body>
