--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-   
+   <input id="pBox" type="password"/>
+    <a href="g.html" onclick="return "
   </body>
 </html>
