--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
    <input id="pBox" type="password"/>
-    <a href="g.html" onclick="return "
+    <a href="g.html" onclick="return passcheck();">
+      <button class="button" type="button">Enter</button>
+    </a>
   </body>
 </html>
