--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <div class="login">
    <input id="pBox" type="password"/>
     <a href="g.html" onclick="return passcheck();">
       <button class="button" type="button">Enter</button>
     </a>
+    </div>
   </body>
 </html>
