--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <hr>
     <div class="login">
    <input id="pBox" type="password"/>
-    <a href="g.html" onclick="return passcheck();">
+    <a href="9056DF736C70D12F464043F0A91F2200A1C08E686702E2C426F80FB19FD2185B.html" onclick="return passcheck();">
       <button class="button" type="button">Enter</button>
     </a>
     </div>
