--- a/9056DF736C70D12F464043F0A91F2200A1C08E686702E2C426F80FB19FD2185B.html
+++ b/9056DF736C70D12F464043F0A91F2200A1C08E686702E2C426F80FB19FD2185B.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" type="text.css">
+    <title>Administration of Pranking</title>
+  </head>
+  <body>
+    <h1 class="header">Pranking Administration</h1>
+    <p class="subtitle">Department of Pranking Administration</p>
+  </body>
+</html>
