--- a/9056DF736C70D12F464043F0A91F2200A1C08E686702E2C426F80FB19FD2185B.html
+++ b/9056DF736C70D12F464043F0A91F2200A1C08E686702E2C426F80FB19FD2185B.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text.css">
+    <link rel="stylesheet" type="text/css" href="page.css">
     <title>Administration of Pranking</title>
   </head>
   <body>
