--- a/9056DF736C70D12F464043F0A91F2200A1C08E686702E2C426F80FB19FD2185B.html
+++ b/9056DF736C70D12F464043F0A91F2200A1C08E686702E2C426F80FB19FD2185B.html
@@ -7,7 +7,7 @@
   <body>
     <h1 class="header">Pranking Administration</h1>
 <div class="box">
-<img src="dpa.jpg" alt="DPA logo" style="width: 150px;"/>
+<img src="dpa.png" alt="DPA logo" style="width: 150px;"/>
 <p style="text-align: center;">DPA</p>
 </div>
   </body>
