--- a/9056DF736C70D12F464043F0A91F2200A1C08E686702E2C426F80FB19FD2185B.html
+++ b/9056DF736C70D12F464043F0A91F2200A1C08E686702E2C426F80FB19FD2185B.html
@@ -5,10 +5,11 @@
     <title>Administration of Pranking</title>
   </head>
   <body>
-    <h1 class="header">Pranking Administration</h1>
+    <h1 class="header">Department of Pranking Administration</h1>
 <div class="box">
 <img src="dpa.png" alt="DPA logo" style="width: 150px; text-align: center;"/>
 <p style="text-align: center;">DPA</p>
+<p style="text-align: center;">since 2025</p>
 </div>
   </body>
 </html>
