--- a/9056DF736C70D12F464043F0A91F2200A1C08E686702E2C426F80FB19FD2185B.html
+++ b/9056DF736C70D12F464043F0A91F2200A1C08E686702E2C426F80FB19FD2185B.html
@@ -2,9 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="page.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Lobster Two' rel='stylesheet'>
     <title>Administration of Pranking</title>
   </head>
   <body>
@@ -15,6 +13,6 @@
 <p style="text-align: center;">DPA</p>
 <p style="text-align: center;">since 2025</p>
 </div>
-<p style="font-family: "Lobster Two", sans-serif;">Hi</p>
+<p style="font-family: Lobster Two">Hi</p>
   </body>
 </html>
