--- a/9056DF736C70D12F464043F0A91F2200A1C08E686702E2C426F80FB19FD2185B.html
+++ b/9056DF736C70D12F464043F0A91F2200A1C08E686702E2C426F80FB19FD2185B.html
@@ -13,6 +13,8 @@
 <p style="text-align: center;">DPA</p>
 <p style="text-align: center;">since 2025</p>
 </div>
-<p style="font-family: Lobster Two">Hi</p>
+<h3 style="font-family: Lobster Two">News:</h3>
+    <br/>
+<p style="font-family: Lobster Two"></p>
   </body>
 </html>
