--- a/9056DF736C70D12F464043F0A91F2200A1C08E686702E2C426F80FB19FD2185B.html
+++ b/9056DF736C70D12F464043F0A91F2200A1C08E686702E2C426F80FB19FD2185B.html
@@ -13,8 +13,18 @@
 <p style="text-align: center;">DPA</p>
 <p style="text-align: center;">since 2025</p>
 </div>
-<h3 style="font-family: Lobster Two">News:</h3>
-    <br/>
-<p style="font-family: Lobster Two"></p>
+<nav class="navbar">
+    <ul class="nav">
+      <li><a href="#">Home</a></li>
+      <li class="dropdown">
+        <a href="#">Latest Pranks ▾</a>
+        <ul class="dropdown-menu">
+          <li><a href="#">The Fart Machine Prank</a></li>
+        </ul>
+      </li>
+      <li><a href="#">Emails</a></li>
+      <li><a href="#">Prank Archives</a></li>
+    </ul>
+  </nav>
   </body>
 </html>
