--- a/9056DF736C70D12F464043F0A91F2200A1C08E686702E2C426F80FB19FD2185B.html
+++ b/9056DF736C70D12F464043F0A91F2200A1C08E686702E2C426F80FB19FD2185B.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="page.css">
+    <link rel="icon" type="image/png" href="dpa.png">
     <link href='https://fonts.googleapis.com/css?family=Lobster Two' rel='stylesheet'>
     <title>Administration of Pranking</title>
   </head>
