--- a/9056DF736C70D12F464043F0A91F2200A1C08E686702E2C426F80FB19FD2185B.html
+++ b/9056DF736C70D12F464043F0A91F2200A1C08E686702E2C426F80FB19FD2185B.html
@@ -14,7 +14,7 @@
     <ul class="nav">
       <li><a href="#">Home</a></li>
       <li class="dropdown">
-        <a href="#">Latest Pranks ▾</a>
+        <a href="latestprank.html">Latest Pranks ▾</a>
         <ul class="dropdown-menu">
           <li><a href="#">The Fart Machine Prank</a></li>
         </ul>
